# DePrinceLab

./: .gitignore  pyproject.toml  readme.md
src/DePrinceLab/: diis.py  uhf.py
src/DePrinceLab/linear_system/: gmres.py  run_tests.py  solvers.py  test_0.py  test_1.py  test_random.py  utils.py
src/DePrinceLab/response/: electronic_structure.py  h_blocks.py  hf_orbital_hessian_builders.py  intermediates_builders.py  main.py  operators.py  readme.md  result.txt
src/DePrinceLab/response/polarizabilities/: core.py  invert_hessian.py  iterative.py  no_hessian_storage.py  operators.py  solve_gmres.py
src/DePrinceLab/response/rome/: equations_hf_orbital_hessian.py  hf_orbital_hessian_action.py
tests/response/: test_water_sto3g.py
